--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -43,6 +43,8 @@
 size="medium"
 color="#fff"
 type="ball-scale-multiple"><p style="color: rgb(255, 255, 255)" > Loading... </p></ngx-spinner>
+
+
 <router-outlet></router-outlet>
 
 <!--footer-->
@@ -52,5 +54,5 @@ type="ball-scale-multiple"><p style="color: rgb(255, 255, 255)" > Loading... </p
     <a class="text-reset fw-bold" href="#">ShoppingMart.com</a>
   </div>
 </footer>
-<!-- Footer -->
+<!-- Footer ends-->
 
