--- a/angular/src/app/views/signup/signup.component.html
+++ b/angular/src/app/views/signup/signup.component.html
@@ -13,7 +13,7 @@
               </div>
               <h1 class="text-center">Register</h1>
               <p class="text-muted text-center">Create your account</p>
-              <form [formGroup]="signupForm" (ngSubmit)="onsubmit()" novalidate>
+              <form [formGroup]="signupForm" (ngSubmit)="doSignUp()" novalidate>
                 <div class="mb-3">
                   <div class="input-group">
                     <span class="input-group-text">
