--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -26,6 +26,15 @@
           <button type="button" class="btn btn-secondary"><i class="fa fa-search"></i></button>
       </div>
   </form>
+  <span *ngIf="currentUser?._id" class="navbar-text">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+       <li class="nav-item">
+         <div class="p-1 mr-4">
+            <button class="nav-item btn btn-light" [routerLink]="['/login']" (click)="logout()" type="submit">logout</button>
+         </div>
+       </li>
+    </ul>
+  </span>
   <a *ngIf="!currentUser?._id" href="#" [routerLink]="['/login']" class="navbar-text">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
