--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -3,3 +3,18 @@
   text-shadow: 1px 1px 1px #ccc;
   font-size: 1.5em;
 }
+.loginUser {
+  margin-left: 16px;
+
+  .img-avatar {
+    max-width: 25px;
+    border: 2px solid white;
+
+  }
+
+  span {
+    margin-left: 7px;
+    color: white;
+    font-weight: 600;
+  }
+}
