--- a/angular/src/app/views/products/products.component.html
+++ b/angular/src/app/views/products/products.component.html
@@ -1,3 +1,12 @@
+<!-- Button trigger modal -->
+
+<div class="row text-right p-2">
+  <div class="col-12 ">
+    <button class="nav-item btn btn-primary" (click)="showeModel()"><i class="fa fa-plus" aria-hidden="true">&nbsp; Edit
+        Products</i></button>
+  </div>
+</div>
+
 <div class="wrapper">
   <div class="container">
     <div class="row g-1">
@@ -76,3 +85,79 @@
     </div>
   </div>
 </div>
+
+
+
+<!-- Modal -->
+<div bsModal #ProductModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true" [config]="{backdrop: 'static', keyboard: false, animated: true}">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title"><i class="fa fa-pencil"></i> Edit Products</h4>
+        <button type="button" class="close" (click)="closeModel()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <form [formGroup]="productForm">
+          <div class="row mb-3">
+            <div class="col-md-3">
+              <label for="productName" class=" col-form-label">Product Name</label>
+            </div>
+            <div class="col-md-9">
+              <input type="text" class="form-control" id="ProductName" autocomplete="off" formControlName="productname">
+            </div>
+            <p class="alert alert-danger mt-1"
+            *ngIf="formError.productname.invalid && (formError.productname.dirty || formError.productname.touched)">
+            <span *ngIf="formError.productname.errors.required">Product Name is Required.</span>
+            <span *ngIf="formError.productname.errors.maxlength">MaxLength is 20.</span>
+            </p>
+          </div>
+          <div class="row mb-3">
+            <div class="col-md-3">
+              <label for="productprice" class=" col-form-label">Product Price</label>
+            </div>
+            <div class="col-md-9">
+              <input type="text" class="form-control" id="productPrice" autocomplete="off" formControlName="productprice">
+            </div>
+            <p class="alert alert-danger mt-1"
+            *ngIf="formError.productprice.invalid && (formError.productprice.dirty || formError.productprice.touched)">
+            <span *ngIf="formError.productprice.errors.required">Product Price is Required.</span>
+            <span *ngIf="formError.productprice.errors.maxlength">MaxLength is 5.</span>
+            </p>
+          </div>
+          <div class="row mb-3">
+            <div class="col-md-3">
+              <label for="productmargin" class=" col-form-label">Product Margin</label>
+            </div>
+            <div class="col-md-9">
+              <input type="text" class="form-control" id="productMargin" autocomplete="off" formControlName="productmargin">
+            </div>
+            <p class="alert alert-danger mt-1"
+            *ngIf="formError.productmargin.invalid && (formError.productmargin.dirty || formError.productmargin.touched)">
+            <span *ngIf="formError.productmargin.errors.required">Product Margin is Required.</span>
+            <span *ngIf="formError.productmargin.errors.maxlength">MaxLength is 5.</span>
+            </p>
+          </div>
+          <div class="col-md-12">
+            <label for="ProductDescription" class="col-form-label">Product Description</label>
+          </div>
+          <div class="col-md-12">
+            <textarea class="form-control" id="ProductDescription" rows="3" autocomplete="off" formControlName="Productdescription">         </textarea>
+            <p class="alert alert-danger mt-1"
+            *ngIf="formError.Productdescription.invalid && (formError.Productdescription.dirty || formError.Productdescription.touched)">
+            <span *ngIf="formError.Productdescription.errors.required">Product Description is Required.</span>
+            <span *ngIf="formError.Productdescription.errors.maxlength">MaxLength is 300.</span>
+            </p>
+          </div>
+        </form>
+        <div class="modal-footer border-top-0 d-flex  justify-content-start">
+          <button type="button" class="btn btn-primary me-1" type="submit" [disabled]="!productForm.valid"(click)="addProduct()">Add Product</button>
+          <button type="button" class="btn btn-danger" (click)="closeModel()">Delete</button>
+        </div>
+        <pre [innerHtml]="this.productForm.value | json"></pre><br><br>
+      </div>
+    </div>
+  </div>
