Addproducts connected with DB

--- a/angular/src/app/views/products/products.component.html
+++ b/angular/src/app/views/products/products.component.html
@@ -2,8 +2,7 @@
 
 <div class="row text-right p-2">
   <div class="col-12 ">
-    <button class="nav-item btn btn-primary" (click)="showeModel()"><i class="fa fa-plus" aria-hidden="true">&nbsp; Edit
-        Products</i></button>
+    <button class="nav-item btn btn-primary" (click)="showeModel()"><i class="fa fa-plus" aria-hidden="true">&nbsp; Add Products </i></button>
   </div>
 </div>
 
@@ -94,7 +93,7 @@
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title"><i class="fa fa-pencil"></i> Edit Products</h4>
+        <h4 class="modal-title"><i class="fa fa-pencil"></i> Add Products</h4>
         <button type="button" class="close" (click)="closeModel()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
