--- a/angular/src/app/views/products/products.component.html
+++ b/angular/src/app/views/products/products.component.html
@@ -111,9 +111,12 @@
           <td>{{product?.Productdescription}}</td>
           <!-- <td>{{product.role == 'admin' ? 'Admin' : 'User'}}</td> -->
           <td>
-            <ui-switch (change)="changeUserStatus(product)" [(ngModel)]="product.status" color="#4285F4"
-              defaultBgColor="#d9d9d9" labelOn="Active" labelOff="Inactive">
-            </ui-switch>
+            <!-- <ui-switch (change)="changeUserStatus(product)" [(ngModel)]="product.status">
+            </ui-switch> -->
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" (change)="changeUserStatus(product)" [(ngModel)]="product.status" />
+              <label class="form-check-label" for="flexSwitchCheckDefault">{{product.status ? 'On': 'Off'}}</label>
+            </div>
           </td>
           <td class="text-center">
             <div class="d-flex justify-content-center">
@@ -129,23 +132,20 @@
   </div>
 </div>
 
+<!--<pre [innerHtml]="productsList | json"> </pre>-->
+
 <!-- Modal -->
 <div bsModal #ProductModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true" [config]="{backdrop: 'static', keyboard: false, animated: true}">
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
-      <div class="modal-header" *ngIf="productForm?._id">
-        <h4 class="modal-title"><i class="fa fa-pencil"></i>Edit Products</h4>
+      <div class="modal-header">
+        <h4 class="modal-title"><i class="fa fa-pencil"></i>{{ productForm.value._id ? 'Edit' : 'Add'}}  Products</h4>
         <button type="button" class="close" (click)="closeModel()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-header" *ngIf="!productForm?._id">
-        <h4 class="modal-title"><i class="fa fa-pencil"></i> Products</h4>
-        <button type="button" class="close" (click)="closeModel()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+
       <div class="modal-body">
 
         <form [formGroup]="productForm">
