--- a/angular/src/app/views/products/products.component.html
+++ b/angular/src/app/views/products/products.component.html
@@ -94,6 +94,7 @@
         <tr class="text-nowrap text-primary">
           <th>S.n.</th>
           <th>Product Name</th>
+          <th>Product Image</th>
           <th>Product Price</th>
           <th>Product Margin</th>
           <th>Product Discription</th>
@@ -106,6 +107,7 @@
         <tr class=" border" *ngFor="let product of productsList; let i=index">
           <th scope="row">{{i+1}}</th>
           <td>{{product?.productname}}</td>
+          <td><img [src]="product?.productImg" width="150px" height="100px"> </td>
           <td>{{product?.productprice}}</td>
           <td>{{product?.productmargin}}</td>
           <td>{{product?.Productdescription}}</td>
@@ -198,6 +200,28 @@
             <span *ngIf="formError.Productdescription.errors.maxlength">MaxLength is 300.</span>
             </p>
           </div>
+          <div class="row mb-3 pt-3" *ngIf="!productForm.value.productImg">
+            <div class="col-md-12">
+              <div class="choose-file w-50 m-auto">
+                Choose Photo
+                <input type="file" id="uploadCaptureInputFile" class="file hide_file bg-white"
+                  accept="file_type | audio/* | video/* | image/* | media_type" (change)="onFileSelected($event)">
+              </div>
+            </div>
+          </div>
+          <div class="row mb-3 pt-3" *ngIf="productForm.value.productImg">
+            <div class="col-form-label col-sm-2 pt-0" for="type">
+            </div>
+            <div class="col-sm-10 card w-75">
+              <span class="fa fa-remove text-danger cursor-pointer fs-6 remove-file-icon"
+                (click)="onFileSelected($event)"> </span>
+              <div class="preview bg-warning">
+                <img  [src]="productForm.value.productImg"
+                  class="rounded d-block w-100" height="250px">
+
+              </div>
+            </div>
+            </div>
         </form>
         <div class="modal-footer border-top-0 d-flex  justify-content-start">
           <button type="button" class="btn btn-primary me-1" type="submit" [disabled]="!productForm.valid"(click)="addProduct()">{{ productForm.value._id ? 'Edit' : 'Add'}} Product</button>
