--- a/angular/src/app/views/home/home.component.html
+++ b/angular/src/app/views/home/home.component.html
@@ -1,186 +1,21 @@
-<div class="p-5 main-body container-fluid">
+<div class="p-5 main-body container-fluid"  >
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3  row-cols-lg-4 g-4">
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/foot-ball.jpg" class="card-img-top product-img" height="200px">
+    <div class="col pb-3" *ngFor="let product of productsList; let i=index">
+      <div class="card h-100 m-auto" >
+        <img [src]="product?.productImg" class="card-img-top product-img p-3" height="200px">
         <div class="card-body">
-          <h5 class="card-title">THE-FOOTBALL</h5>
+          <h5 class="card-title">{{product?.productname}}</h5>
         </div>
         <ul class="list-group list-group-flush">
-        <li class="list-group-item">Price - 1800</li>
+        <li class="list-group-item"><b>₹ {{product?.productprice}}</b></li>
+        <li class="list-group-item" [title]="product?.Productdescription">{{product?.Productdescription.substring(0,100)}}</li>
         </ul>
         <div class="card-footer">
           <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
+          <button type="button" class="btn btn-primary float-right" data-bs-toggle="button" autocomplete="off">Buy Product</button>
         </div>
       </div>
     </div>
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/WalloBall.jpg" class="card-img-top product-img" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">THE-VOLLEYBALL</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Price - 1500</li>
-        </ul>
-        <div class="card-footer">
-          <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
-        </div>
-      </div>
-    </div>
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/cricket-ball.jpg" class="card-img-top product-img"height="200px">
-        <div class="card-body">
-          <h5 class="card-title">THE-CRICKET-BALL</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Price - 1200</li>
-          </ul>
-        <div class="card-footer">
-          <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
-        </div>
-      </div>
-    </div>
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/golf-ball.jpg" class="card-img-top product-img" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">THE-GOLF-BALL</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-           <li class="list-group-item">Price - 7000</li>
-        </ul>
-        <div class="card-footer">
-          <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
-        </div>
-      </div>
-    </div>
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/foot-ball.jpg" class="card-img-top product-img" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">THE-FOOTBALL</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-        <li class="list-group-item">Price - 1800</li>
-        </ul>
-        <div class="card-footer">
-          <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
-        </div>
-      </div>
-    </div>
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/WalloBall.jpg" class="card-img-top product-img" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">THE-VOLLEYBALL</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Price - 1500</li>
-        </ul>
-        <div class="card-footer">
-          <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
-        </div>
-      </div>
-    </div>
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/cricket-ball.jpg" class="card-img-top product-img"height="200px">
-        <div class="card-body">
-          <h5 class="card-title">THE-CRICKET-BALL</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Price - 1200</li>
-          </ul>
-        <div class="card-footer">
-          <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
-        </div>
-      </div>
-    </div>
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/foot-ball.jpg" class="card-img-top product-img" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">THE-FOOTBALL</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-        <li class="list-group-item">Price - 1800</li>
-        </ul>
-        <div class="card-footer">
-          <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
-        </div>
-      </div>
-    </div>
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/foot-ball.jpg" class="card-img-top product-img" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">THE-FOOTBALL</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-        <li class="list-group-item">Price - 1800</li>
-        </ul>
-        <div class="card-footer">
-          <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
-        </div>
-      </div>
-    </div>
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/WalloBall.jpg" class="card-img-top product-img" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">THE-VOLLEYBALL</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Price - 1500</li>
-        </ul>
-        <div class="card-footer">
-          <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
-        </div>
-      </div>
-    </div>
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/cricket-ball.jpg" class="card-img-top product-img"height="200px">
-        <div class="card-body">
-          <h5 class="card-title">THE-CRICKET-BALL</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Price - 1200</li>
-          </ul>
-        <div class="card-footer">
-          <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
-        </div>
-      </div>
-    </div>
-    <div class="col pb-3">
-      <div class="card h-100" >
-        <img src="../assets/images/golf-ball.jpg" class="card-img-top product-img" height="200px">
-        <div class="card-body">
-          <h5 class="card-title">THE-GOLF-BALL</h5>
-        </div>
-        <ul class="list-group list-group-flush">
-           <li class="list-group-item">Price - 7000</li>
-        </ul>
-        <div class="card-footer">
-          <a href="#" class="card-link">Add to Cart</a>
-          <a href="#" class="card-link">Add to wish List</a>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 <br>
 
