--- a/angular/src/app/views/home/home.component.scss
+++ b/angular/src/app/views/home/home.component.scss
@@ -4,14 +4,58 @@
   width: 5%;
 }
 
-.product-img {
+// .product-img {
+//   display: block;
+//   margin-left: auto;
+//   margin-right: auto;
+//   width:  200px;
+//   height: 200px;
+//   object-fit: cover;
+// }
+
+.card-img-top.product-img.p-3 {
+  cursor: pointer;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  // top: 0px;
+  position: relative;
   width:  200px;
   height: 200px;
   object-fit: cover;
+  border-radius: 4px;
+  padding: 32px 24px;
+  text-decoration: none;
+  z-index: 0;
+  overflow: hidden;
+
+  &:hover {
+    transition: all 0.2s ease-out;
+    box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+    top: -4px;
+    border: 1px solid #0ac0e4;
+    background-color: white;
+  }
+
+  &:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: -16px;
+    right: -16px;
+    height: 32px;
+    width: 32px;
+
+    transform: scale(2);
+    transform-origin: 50% 50%;
+    transition: transform 0.15s ease-out;
+  }
+
+  &:hover:before {
+    transform: scale(2.15);
+  }
 }
+
 
 // .main-body{
 //   background-color: gray;
