--- a/angular/src/app/views/home/home.component.html
+++ b/angular/src/app/views/home/home.component.html
@@ -12,7 +12,7 @@
         </ul>
         <div class="card-footer">
           <a href="#" class="card-link">Add to Cart</a>
-          <button type="button" class="btn btn-primary float-right" data-bs-toggle="button" autocomplete="off">Buy Product</button>
+          <button type="button" class="btn btn-primary float-right" [routerLink]="['/product-details', product._id ]" data-bs-toggle="button" autocomplete="off" >Buy Product</button>
         </div>
       </div>
     </div>
