--- a/angular/src/app/views/product-details/product-details.component.html
+++ b/angular/src/app/views/product-details/product-details.component.html
@@ -1,28 +1,27 @@
-<div class="container">
+<div class="container pt-4">
   <div class="col-lg-8 border p-3 main-section bg-white">
-      <div class="row hedding m-0 pl-3 pt-0 pb-3">
-          Product Details
-      </div>
+    <div class="clearfix">
+      <div class="float-left row hedding m-0 pl-3 pt-0 pb-3">Product Details</div>
+      <div class="float-right" [routerLink]="['/home']"><i class="fa fa-long-arrow-left"></i><span class="ml-1">Back</span></div>
+    </div>
       <div class="row m-0">
           <div class="col-lg-4 left-side-product-box pb-3">
-              <img [src]="" class="border p-3">
+              <img [src]="productData.productImg" class="border p-3">
           </div>
           <div class="col-lg-8">
               <div class="right-side-pro-detail border p-3 m-0">
                   <div class="row">
                       <div class="col-lg-12">
                           <span>Who What Wear</span>
-                          <p class="m-0 p-0">Women's Velvet Dress</p>
+                          <p class="m-0 p-0">{{productData.productname}}</p>
                       </div>
                       <div class="col-lg-12">
-                          <p class="m-0 p-0 price-pro">$30</p>
+                          <p class="m-0 p-0 price-pro">₹{{calculateMargin()}}</p>
                           <hr class="p-0 m-0">
                       </div>
                       <div class="col-lg-12 pt-2">
                           <h5>Product Detail</h5>
-                          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                              quis nostrud exercitation ullamco laboris.</span>
+                          <span>{{productData.Productdescription}}</span>
                           <hr class="m-0 pt-2 mt-2">
                       </div>
                       <div class="col-lg-12">
@@ -45,4 +44,8 @@
                   </div>
               </div>
           </div>
+          <!--<pre [innerHtml]="this.productData | json"></pre>-->
       </div>
+  </div>
+</div>
+
