--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,11 +1,15 @@
 <!--Navabr-->
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-primary ">
   <i class="fa fa-shopping-bag ml-5" aria-hidden="true"></i><a class="navbar-brand ml-1" [routerLink]="['/home']">&nbsp;Shopping Mart</a>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+  <button aria-controls="main-nav" (click)="toggleNavbar()" class="navbar-toggler collapsed" type="button"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarText">
+  <div class="collapse navbar-collapse" id="main-nav" [ngClass]='{show: showNav}'>
+    <button aria-controls="main-nav" (click)="toggleNavbar()" class="navbar-toggler collapsed" type="button"
+          aria-label="Toggle navigation">
+          <i class="fa fa-times"></i>
+        </button>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" [routerLink]="['/home']">Home<span class="sr-only">(current)</span></a>
