--- a/angular/src/app/views/product-details/product-details.component.html
+++ b/angular/src/app/views/product-details/product-details.component.html
@@ -1,51 +1,71 @@
-<div class="container pt-4">
-  <div class="col-lg-8 border p-3 main-section bg-white">
+<div class="container" style="margin-top: 40px; margin-bottom: 80px;">
+  <div class="col-lg-8 border p-3 bg-white" style="margin: 0 auto;">
     <div class="clearfix">
       <div class="float-left row hedding m-0 pl-3 pt-0 pb-3">Product Details</div>
-      <div class="float-right" [routerLink]="['/home']"><i class="fa fa-long-arrow-left"></i><span class="ml-1">Back</span></div>
+      <div class="float-right" [routerLink]="['/home']"><i class="fa fa-long-arrow-left"></i><span
+          class="ml-1">Back</span></div>
     </div>
-      <div class="row m-0">
-          <div class="col-lg-4 left-side-product-box pb-3">
-              <img [src]="productData.productImg" class="border p-3">
-          </div>
-          <div class="col-lg-8">
-              <div class="right-side-pro-detail border p-3 m-0">
-                  <div class="row">
-                      <div class="col-lg-12">
-                          <span>Who What Wear</span>
-                          <p class="m-0 p-0">{{productData.productname}}</p>
-                      </div>
-                      <div class="col-lg-12">
-                          <p class="m-0 p-0 price-pro">₹{{calculateMargin()}}</p>
-                          <hr class="p-0 m-0">
-                      </div>
-                      <div class="col-lg-12 pt-2">
-                          <h5>Product Detail</h5>
-                          <span>{{productData.Productdescription}}</span>
-                          <hr class="m-0 pt-2 mt-2">
-                      </div>
-                      <div class="col-lg-12">
-                          <p class="tag-section"><strong>Tag : </strong><a href="">Woman</a><a href="">,Man</a></p>
-                      </div>
-                      <div class="col-lg-12">
-                          <h6>Quantity :</h6>
-                          <input type="number" class="form-control text-center w-100" value="1">
-                      </div>
-                      <div class="col-lg-12 mt-3">
-                          <div class="row">
-                              <div class="col-lg-6 pb-2">
-                                  <a class="btn btn-danger w-100" (click)="commingSoon()">Add To Cart</a>
-                              </div>
-                              <div class="col-lg-6">
-                                  <a href="#" class="btn btn-success w-100">Shop Now</a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <!--<pre [innerHtml]="this.productData | json"></pre>-->
+    <div class="row m-0">
+      <div class="col-lg-4 left-side-product-box pb-3">
+        <img [src]="productData.productImg" class="shadow-lg p-3 mb-5 bg-body rounded">
       </div>
+      <div class="col-lg-8">
+        <div class="right-side-pro-detail  p-3 m-0">
+          <div class="row">
+
+            <div class="row">
+              <div class="col-lg-10">
+                <span>Who What Wear</span>
+                <p class="name">{{productData.productname}}</p>
+              </div>
+              <div class="col-lg-2">
+                <a href="#" class="btn btn-secondary btn-lg w-100 float-left "> <i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+            <div class="product-price">
+              <h4 class="last-price">Old Price: <span>₹{{productData.productprice}}</span></h4>
+              <h4 class="new-price">New Price: <span>₹{{calculateMargin()}} ({{productData.productmargin}}% off)</span>
+              </h4>
+            </div>
+            <div class="col-lg-12 pt-2">
+              <h5>Product Detail</h5>
+              <span>{{productData.Productdescription}}</span>
+              <hr class="m-0 pt-2 mt-2">
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="sizes mt-3">
+                  <h6 class="text-uppercase">Size</h6> <label class="radio mr-1"> <input type="radio" name="size"
+                      value="S" checked> <span>S</span> </label> <label class="radio  mr-1"> <input type="radio"
+                      name="size" value="M"> <span>M</span> </label> <label class="radio  mr-1"> <input type="radio"
+                      name="size" value="L"> <span>L</span> </label> <label class="radio  mr-1"> <input
+                      type="radio  mr-1" name="size" value="XL"> <span>XL</span> </label> <label class="radio  mr-1">
+                    <input type="radio" name="size" value="XXL"> <span>XXL</span> </label>
+                </div>
+              </div>
+              <div class="col">
+                <div class="col-lg-12  mt-3">
+                  <h6>Quantity :</h6>
+                  <input type="number" class="form-control text-center w-100" value="1">
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12 mt-3">
+              <div class="row">
+                <div class="col-lg-6 pb-2">
+                  <a class="btn btn-danger w-100" (click)="commingSoon()">Add To Cart</a>
+                </div>
+                <div class="col-lg-6">
+                  <a href="#" class="btn btn-success w-100">Buy Now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
+
+<!--<pre [innerHtml]="this.productData | json"></pre>-->
