--- a/angular/src/app/views/product-details/product-details.component.html
+++ b/angular/src/app/views/product-details/product-details.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row m-0">
       <div class="col-lg-4 left-side-product-box pb-3">
-        <img [src]="productData.productImg" class="shadow-lg p-3 mb-5 bg-body rounded">
+        <img [src]="productData.productImg" [title]="productData.Productdescription" class="shadow-lg p-3 mb-5 bg-body rounded" style="cursor: pointer;">
       </div>
       <div class="col-lg-8">
         <div class="right-side-pro-detail  p-3 m-0">
@@ -45,7 +45,7 @@
               </div>
               <div class="col">
                 <div class="col-lg-12  mt-3">
-                  <h6>Quantity :</h6>
+                  <h6>QUANTITY :</h6>
                   <input type="number" class="form-control text-center w-100" value="1">
                 </div>
               </div>
