--- a/angular/src/app/views/product-details/product-details.component.html
+++ b/angular/src/app/views/product-details/product-details.component.html
@@ -38,8 +38,8 @@
                   <h6 class="text-uppercase">Size</h6> <label class="radio mr-1"> <input type="radio" name="size"
                       value="S" checked> <span>S</span> </label> <label class="radio  mr-1"> <input type="radio"
                       name="size" value="M"> <span>M</span> </label> <label class="radio  mr-1"> <input type="radio"
-                      name="size" value="L"> <span>L</span> </label> <label class="radio  mr-1"> <input
-                      type="radio  mr-1" name="size" value="XL"> <span>XL</span> </label> <label class="radio  mr-1">
+                      name="size" value="L"> <span>L</span> </label> <label class="radio  mr-1"> <input type="radio"
+                        name="size" value="XL"> <span>XL</span> </label><label class="radio  mr-1">
                     <input type="radio" name="size" value="XXL"> <span>XXL</span> </label>
                 </div>
               </div>
