--- a/angular/src/app/views/user-profile/user-profile.component.html
+++ b/angular/src/app/views/user-profile/user-profile.component.html
@@ -1,22 +1,22 @@
-<section style="background-color: #eee;">
-  <div class="container py-5">
+<section>
+  <div class="container p-5 mt-5 mb-5">
     <div class="row">
       <div class="col-lg-4">
         <div class="card mb-4">
           <div class="card-body text-center">
             <img src="../../assets/images/User-Profile-PNG.png" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
-            <h5 class="my-3">TechnoJerry</h5>
-            <p class="text-muted mb-1">Full Stack Developer</p>
+            <h5 class="my-3">{{currentUser.firstname}} {{currentUser.lastname}}</h5>
+            <p class="text-muted mb-1">{{currentUser.role}}</p>
             <p class="text-muted mb-4">Indore, Madhya Pradesh, IN</p>
-            <div class="d-flex justify-content-center mb-2">
+            <!-- <div class="d-flex justify-content-center mb-2">
               <button type="button" class="btn btn-primary">Follow</button>
               <button type="button" class="btn btn-outline-primary ms-1">Message</button>
-            </div>
+            </div> -->
           </div>
         </div>
 
-        <div class="card mb-4 mb-lg-0">
+        <!-- <div class="card mb-4 mb-lg-0">
           <div class="card-body p-0">
             <ul class="list-group list-group-flush rounded-3">
               <li class="list-group-item d-flex justify-content-between align-items-center p-3">
@@ -41,7 +41,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
 
       <div class="col-lg-8">
@@ -52,7 +52,7 @@
                 <p class="mb-0">Full Name</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">Rajat Verma</p>
+                <p class="text-muted mb-0">{{currentUser.firstname}} {{currentUser.lastname}}</p>
               </div>
             </div>
             <hr>
@@ -61,7 +61,7 @@
                 <p class="mb-0">Email</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">rajat@amwebtech.com</p>
+                <p class="text-muted mb-0">{{currentUser.email}}</p>
               </div>
             </div>
             <hr>
@@ -70,7 +70,16 @@
                 <p class="mb-0">Phone</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">+91-9770496777</p>
+                <p class="text-muted mb-0">{{currentUser.phonenumber}}</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Gender</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">{{currentUser.gender}}</p>
               </div>
             </div>
             <hr>
@@ -84,7 +93,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-md-6">
             <div class="card mb-4 mb-md-0">
               <div class="card-body">
@@ -151,9 +160,8 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
 </section>
-<br><br>
